feat: Implement responsive mobile navigation with a full-screen menu and add styles for new watch product and brand display sections.

--- a/index.html
+++ b/index.html
@@ -29,18 +29,160 @@
                 <div class="nav-icons">
                     <a href="#" class="icon"><i class="fas fa-search"></i></a>
                     <a href="#" class="icon"><i class="fas fa-shopping-bag"></i></a>
+                    <div id="nav-menu">
+                        <i class="fa-solid fa-bars"></i>
+                    </div>
                 </div>
             </div>
         </nav>
+        <div id="full-menu">
+            <div class="menu-links">
+                <a href="">Home</a>
+                <a href="">Collection</a>
+                <a href="">Brands</a>
+                <a href="">About</a>
+                <a href="">Contact</a>
+            </div>
+            <i class="fa-solid fa-xmark" id="close-menu"></i>
+        </div>
     </header>
     <main>
         <section class="hero">
             <div class="hero-content">
                 <h1>Timeless Elegance</h1>
-                <p>Curating the world's finest luxury timepieces since 1985. Experience the perfect blend of craftsmanship, innovation, and timeless beauty.</p>
+                <p>Curating the world's finest luxury timepieces since 1985. Experience the perfect blend of
+                    craftsmanship, innovation, and timeless beauty.</p>
+                <div class="btns">
+                    <div class="primary-btn">Explore collection</div>
+                    <div class="secondary-btn">our story</div>
+                </div>
+            </div>
+        </section>
+        <section class="watch-section">
+            <p>equisite timepieces</p>
+            <h2>Featured Collection</h2>
+            <div class="watch-grid">
+                <div class="watch-card">
+                    <div class="watch-image-container">
+                        <div class="watch-image v2-img-1"></div>
+                        <div class="watch-overlay">
+                            <span class="view-btn">View Details</span>
+                        </div>
+                    </div>
+                    <div class="watch-info-v2">
+                        <h4 class="brand">Patek Philippe</h4>
+                        <h3 class="model">Nautilus Blue Dial</h3>
+                        <p class="price">$145,000</p>
+                    </div>
+                </div>
+                <div class="watch-card">
+                    <div class="watch-image-container">
+                        <div class="watch-image v2-img-2"></div>
+                        <div class="watch-overlay">
+                            <span class="view-btn">View Details</span>
+                        </div>
+                    </div>
+                    <div class="watch-info-v2">
+                        <h4 class="brand">Rolex</h4>
+                        <h3 class="model">Cosmograph Daytona</h3>
+                        <p class="price">$52,000</p>
+                    </div>
+                </div>
+                <div class="watch-card">
+                    <div class="watch-image-container">
+                        <div class="watch-image v2-img-3"></div>
+                        <div class="watch-overlay">
+                            <span class="view-btn">View Details</span>
+                        </div>
+                    </div>
+                    <div class="watch-info-v2">
+                        <h4 class="brand">Audemars Piguet</h4>
+                        <h3 class="model">Royal Oak Jumbo</h3>
+                        <p class="price">$88,000</p>
+                    </div>
+                </div>
+                <div class="watch-card">
+                    <div class="watch-image-container">
+                        <div class="watch-image v2-img-4"></div>
+                        <div class="watch-overlay">
+                            <span class="view-btn">View Details</span>
+                        </div>
+                    </div>
+                    <div class="watch-info-v2">
+                        <h4 class="brand">Richard Mille</h4>
+                        <h3 class="model">RM 30-01</h3>
+                        <p class="price">$1,200,000</p>
+                    </div>
+                </div>
+                <div class="watch-card">
+                    <div class="watch-image-container">
+                        <div class="watch-image v2-img-5"></div>
+                        <div class="watch-overlay">
+                            <span class="view-btn">View Details</span>
+                        </div>
+                    </div>
+                    <div class="watch-info-v2">
+                        <h4 class="brand">Vacheron Constantin</h4>
+                        <h3 class="model">Patrimony</h3>
+                        <p class="price">$31,200</p>
+                    </div>
+                </div>
+                <div class="watch-card">
+                    <div class="watch-image-container">
+                        <div class="watch-image v2-img-6"></div>
+                        <div class="watch-overlay">
+                            <span class="view-btn">View Details</span>
+                        </div>
+                    </div>
+                    <div class="watch-info-v2">
+                        <h4 class="brand">Omega</h4>
+                        <h3 class="model">Master Chronometer</h3>
+                        <p class="price">$12,800</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="watch-brands">
+            <div class="watch-brands-title">word-class brands</div>
+            <div class="watch-brands-subtitle">Our Prestigious Brands</div>
+            <div class="watch-brands-grid">
+                <div class="watch-brand-card">
+                    <div class="watch-brand-image v1"></div>
+                </div>
+                <div class="watch-brand-card">
+                    <div class="watch-brand-image v2"></div>
+                </div>
+                <div class="watch-brand-card">
+                    <div class="watch-brand-image v3"></div>
+                </div>
+                <div class="watch-brand-card">
+                    <div class="watch-brand-image v4"></div>
+                </div>
+                <div class="watch-brand-card">
+                    <div class="watch-brand-image v5"></div>
+                </div>
+                <div class="watch-brand-card">
+                    <div class="watch-brand-image v6"></div>
+                </div>
+                <div class="watch-brand-card">
+                    <div class="watch-brand-image v7"></div>
+                </div>
+                <div class="watch-brand-card">
+                    <div class="watch-brand-image v8"></div>
+                </div>
+                <div class="watch-brand-card">
+                    <div class="watch-brand-image v9"></div>
+                </div>
+
             </div>
         </section>
     </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js"
+        integrity="sha512-NcZdtrT77bJr4STcmsGAESr06BYGE8woZdSdEgqnpyqac7sugNO+Tr4bGwGF3MsnEkGKhU2KL2xh6Ec+BqsaHA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/ScrollTrigger.min.js"></script>
+    <script src="script.js"></script>
 </body>
+
 
 </html>
