feat: Add Richard Mille brand page, linking it from index.html and removing srtyle.html.

--- a/index.html
+++ b/index.html
@@ -152,9 +152,11 @@
                 <div class="watch-brand-card">
                     <div class="watch-brand-image v2"></div>
                 </div>
-                <div class="watch-brand-card">
+                <a href="">
+                    <div class="watch-brand-card">
                     <div class="watch-brand-image v3"></div>
                 </div>
+                </a>
                 <div class="watch-brand-card">
                     <div class="watch-brand-image v4"></div>
                 </div>
