feat: add a Richard Mille watch collection section to the page and implement its corresponding styling.

--- a/Richard/richard.html
+++ b/Richard/richard.html
@@ -60,6 +60,175 @@
                 <p>A racing machine on the wrist</p>
             </div>
         </div>
+        <section class="watch-section">
+            <p>Engineering excellence</p>
+            <h2>Richard Mille Collection</h2>
+            <div class="watch-grid">
+                <div class="watch-card">
+                    <div class="watch-image-container">
+                        <div class="watch-image rm-img-1"></div>
+                    </div>
+                    <div class="watch-info-v2">
+                        <h3 class="model">RM 38-02 MANUAL WINDING TOURBILLION BUBBA WATSON</h3>
+                        <p class="price">$4,000,000</p>
+                    </div>
+                </div>
+                <div class="watch-card">
+                    <div class="watch-image-container">
+                        <div class="watch-image rm-img-2"></div>
+                    </div>
+                    <div class="watch-info-v2">
+                        <h3 class="model">RM 47 MANUAL WINDING TOURBILLION</h3>
+                        <p class="price">$1,050,000</p>
+                    </div>
+                </div>
+                <div class="watch-card">
+                    <div class="watch-image-container">
+                        <div class="watch-image rm-img-3"></div>
+                    </div>
+                    <div class="watch-info-v2">
+                        <h3 class="model">RM 40-01 AUTOMATIC TOURBILLON MCLAREN SPEEDTAIL</h3>
+                        <p class="price">$900,000</p>
+                    </div>
+                </div>
+                <div class="watch-card">
+                    <div class="watch-image-container">
+                        <div class="watch-image rm-img-4"></div>
+                    </div>
+                    <div class="watch-info-v2">
+                        <h3 class="model">RM 27-04 MANUAL WINDING TOURBILLION RAFAEL NADAL</h3>
+                        <p class="price">$1,200,000 - $2,000,000</p>
+                    </div>
+                </div>
+                <div class="watch-card">
+                    <div class="watch-image-container">
+                        <div class="watch-image rm-img-5"></div>
+                    </div>
+                    <div class="watch-info-v2">
+                        <h3 class="model">RM 11-05 AUTOMATIC FLYBACK CHRONOGRAPH GMT</h3>
+                        <p class="price">$215,000 - $250,000</p>
+                    </div>
+                </div>
+                <div class="watch-card">
+                    <div class="watch-image-container">
+                        <div class="watch-image rm-img-6"></div>
+                    </div>
+                    <div class="watch-info-v2">
+                        <h3 class="model">RM 33-02 AUTOMATIC</h3>
+                        <p class="price">$130,000 - $180,000</p>
+                    </div>
+                </div>
+                <div class="watch-card">
+                    <div class="watch-image-container">
+                        <div class="watch-image rm-img-7"></div>
+                    </div>
+                    <div class="watch-info-v2">
+                        <h3 class="model">RM 71-02 AUTOMATIC TOURBILLION TALISMAN</h3>
+                        <p class="price">$400,000 - $450,000</p>
+                    </div>
+                </div>
+                <div class="watch-card">
+                    <div class="watch-image-container">
+                        <div class="watch-image rm-img-8"></div>
+                    </div>
+                    <div class="watch-info-v2">
+                        <h3 class="model">RM 11-04 AUTOMATIC WINDING FLYBACK CHRONOGRAPH ROBERTO MANCINI</h3>
+                        <p class="price">$200,000 - $250,000</p>
+                    </div>
+                </div>
+                <div class="watch-card">
+                    <div class="watch-image-container">
+                        <div class="watch-image rm-img-9"></div>
+                    </div>
+                    <div class="watch-info-v2">
+                        <h3 class="model">RM 62-01 MANUAL WINDING TOURBILLION VIBRATING ALARM ACJ</h3>
+                        <p class="price">$1,200,000 - $1,400,000</p>
+                    </div>
+                </div>
+                <div class="watch-card">
+                    <div class="watch-image-container">
+                        <div class="watch-image rm-img-10"></div>
+                    </div>
+                    <div class="watch-info-v2">
+                        <h3 class="model">RM 52-05 MANUAL WINDING TOURBILLION PHARRELL WILLIAMS</h3>
+                        <p class="price">$1,900,000 - $2,200,000</p>
+                    </div>
+                </div>
+                <div class="watch-card">
+                    <div class="watch-image-container">
+                        <div class="watch-image rm-img-11"></div>
+                    </div>
+                    <div class="watch-info-v2">
+                        <h3 class="model">RM 50-04 TOURBILLION SPLIT SECONDS CHRONOGRAPH</h3>
+                        <p class="price">$1,800,000 - $2,200,000</p>
+                    </div>
+                </div>
+                <div class="watch-card">
+                    <div class="watch-image-container">
+                        <div class="watch-image rm-img-12"></div>
+                    </div>
+                    <div class="watch-info-v2">
+                        <h3 class="model">BONBON COLLECTION AUTOMATIC WINDING CALIBRES</h3>
+                        <p class="price">$950,000</p>
+                    </div>
+                </div>
+                <div class="watch-card">
+                    <div class="watch-image-container">
+                        <div class="watch-image rm-img-13"></div>
+                    </div>
+                    <div class="watch-info-v2">
+                        <h3 class="model">RM 25-01 MANUAL WINDING TOURBILLION CHRONOGRAPH ADVENTURE</h3>
+                        <p class="price">$1,800,000 - $2,000,000</p>
+                    </div>
+                </div>
+                <div class="watch-card">
+                    <div class="watch-image-container">
+                        <div class="watch-image rm-img-14"></div>
+                    </div>
+                    <div class="watch-info-v2">
+                        <h3 class="model">RM 53-01 TOURBILLION PABLO MAC DONOUGH</h3>
+                        <p class="price">$1,200,000 - $1,400,000</p>
+                    </div>
+                </div>
+                <div class="watch-card">
+                    <div class="watch-image-container">
+                        <div class="watch-image rm-img-15"></div>
+                    </div>
+                    <div class="watch-info-v2">
+                        <h3 class="model">RM 11-03 AUTOMATIC FLYBACK CHRONOGRAPH MCLAREN</h3>
+                        <p class="price">$2,500,000 - $2,700,000</p>
+                    </div>
+                </div>
+                <div class="watch-card">
+                    <div class="watch-image-container">
+                        <div class="watch-image rm-img-16"></div>
+                    </div>
+                    <div class="watch-info-v2">
+                        <h3 class="model">RM 71-01 AUTOMATIC TOURBILLION TALISMAN</h3>
+                        <p class="price">$400,000 - $450,000</p>
+                    </div>
+                </div>
+                <div class="watch-card">
+                    <div class="watch-image-container">
+                        <div class="watch-image rm-img-17"></div>
+                    </div>
+                    <div class="watch-info-v2">
+                        <h3 class="model">RM 50-03 TOURBILLION SPLIT-SECONDS CHRONOGRAPH MCLAREN F1</h3>
+                        <p class="price">$980,000 - $1,050,000</p>
+                    </div>
+                </div>
+                <div class="watch-card">
+                    <div class="watch-image-container">
+                        <div class="watch-image rm-img-18"></div>
+                    </div>
+                    <div class="watch-info-v2">
+                        <h3 class="model">RM 27-03 TOURBILLION RAFAEL NADAL</h3>
+                        <p class="price">$950,000</p>
+                    </div>
+                </div>
+
+            </div>
+        </section>
     </main>
     <script src="richard.js"></script>
 </body>
