feat: Implement a "Brands" mega-menu dropdown in the navigation with associated styling, JavaScript interactivity, and a dedicated link for Richard Mille.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,47 @@
                 <ul class="nav-links">
                     <li><a href="">Home</a></li>
                     <li><a href="">Collection</a></li>
-                    <li><a href="">Brands</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle">Brands <i class="fas fa-chevron-down"></i></a>
+                        <div class="dropdown-menu mega-menu">
+                            <div class="mega-menu-column">
+                                <h3>A - F</h3>
+                                <a href="#">A. Lange & Söhne</a>
+                                <a href="#">Audemars Piguet</a>
+                                <a href="#">Blancpain</a>
+                                <a href="#">Breguet</a>
+                                <a href="#">Breitling</a>
+                                <a href="#">Bulgari</a>
+                                <a href="#">Cartier</a>
+                                <a href="#">Chopard</a>
+                                <a href="#">Franck Muller</a>
+                            </div>
+                            <div class="mega-menu-column">
+                                <h3>G - O</h3>
+                                <a href="#">Girard-Perregaux</a>
+                                <a href="#">Glashütte Original</a>
+                                <a href="#">Grand Seiko</a>
+                                <a href="#">Hublot</a>
+                                <a href="#">IWC Schaffhausen</a>
+                                <a href="#">Jaeger-LeCoultre</a>
+                                <a href="#">Longines</a>
+                                <a href="#">Omega</a>
+                            </div>
+                            <div class="mega-menu-column">
+                                <h3>P - Z</h3>
+                                <a href="#">Panerai</a>
+                                <a href="#">Patek Philippe</a>
+                                <a href="#">Piaget</a>
+                                <a href="Richard/richard.html">Richard Mille</a>
+                                <a href="#">Roger Dubuis</a>
+                                <a href="#">Rolex</a>
+                                <a href="#">TAG Heuer</a>
+                                <a href="#">Tudor</a>
+                                <a href="#">Vacheron Constantin</a>
+                                <a href="#">Zenith</a>
+                            </div>
+                        </div>
+                    </li>
                     <li><a href="">About</a></li>
                     <li><a href="">Contact</a></li>
                 </ul>
@@ -152,10 +192,10 @@
                 <div class="watch-brand-card">
                     <div class="watch-brand-image v2"></div>
                 </div>
-                <a href="">
+                <a href="Richard/richard.html">
                     <div class="watch-brand-card">
-                    <div class="watch-brand-image v3"></div>
-                </div>
+                        <div class="watch-brand-image v3"></div>
+                    </div>
                 </a>
                 <div class="watch-brand-card">
                     <div class="watch-brand-image v4"></div>
