feat: Add Audemars Piguet page with hero image and watch collection, update navigation link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             <div class="mega-menu-column">
                                 <h3>A - F</h3>
                                 <a href="#">A. Lange & Söhne</a>
-                                <a href="#">Audemars Piguet</a>
+                                <a href="AP/ap.html">Audemars Piguet</a>
                                 <a href="#">Blancpain</a>
                                 <a href="#">Breguet</a>
                                 <a href="#">Breitling</a>
