--- a/AP/ap.html
+++ b/AP/ap.html
@@ -26,7 +26,7 @@
     <header>
         <nav>
             <div class="nav">
-                <h1 class="logo">Timeless Elegance</h1>
+                <!-- <h1 class="logo">Timeless Elegance</h1>
                 <ul class="nav-links">
                     <li><a href="/index.html">Home</a></li>
                     <li><a href="">Collection</a></li>
@@ -40,7 +40,8 @@
                     <div id="nav-menu">
                         <i class="fa-solid fa-bars"></i>
                     </div>
-                </div>
+                </div> -->
+                <div class="logo"></div>
             </div>
         </nav>
         <div id="full-menu">
@@ -56,10 +57,14 @@
     </header>
     <main>
         <div class="hero-image">
+            <div class="logo"></div>
             <div class="hero-content">
                 <h1>Audemars Piguet Collection</h1>
                 <p>Masterpieces of horological innovation</p>
             </div>
+        </div>
+        <div class="watch-video">
+            <video src="https://dynamicmedia.audemarspiguet.com/is/content/audemarspiguet/Mecha_White_D_prob4?dpr=off" autoplay muted loop height="900" width="1515"></video>
         </div>
         <section class="watch-section">
             <p>Engineering excellence</p>
