feat: Implement hero section with logo, content, and a watch video, and establish base styling.

--- a/AP/ap.html
+++ b/AP/ap.html
@@ -24,26 +24,6 @@
 
 <body>
     <header>
-        <nav>
-            <div class="nav">
-                <!-- <h1 class="logo">Timeless Elegance</h1>
-                <ul class="nav-links">
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="">Collection</a></li>
-                    <li><a href="">Brands</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Contact</a></li>
-                </ul>
-                <div class="nav-icons">
-                    <a href="#" class="icon"><i class="fas fa-search"></i></a>
-                    <a href="#" class="icon"><i class="fas fa-shopping-bag"></i></a>
-                    <div id="nav-menu">
-                        <i class="fa-solid fa-bars"></i>
-                    </div>
-                </div> -->
-                <div class="logo"></div>
-            </div>
-        </nav>
         <div id="full-menu">
             <div class="menu-links">
                 <a href="">Home</a>
@@ -64,7 +44,10 @@
             </div>
         </div>
         <div class="watch-video">
-            <video src="https://dynamicmedia.audemarspiguet.com/is/content/audemarspiguet/Mecha_White_D_prob4?dpr=off" autoplay muted loop height="900" width="1515"></video>
+            <video src="https://dynamicmedia.audemarspiguet.com/is/content/audemarspiguet/Mecha_White_D_prob4?dpr=off"
+                autoplay muted loop height="900" width="1515"></video>
+            <div class="video-content">welcome to the house of wonders</div>
+            <a href="https://150years.audemarspiguet.com/en#/"><button>Discover now</button></a>
         </div>
         <section class="watch-section">
             <p>Engineering excellence</p>
