feat: add Rolex brand page and update AP and Richard Mille pages with correct titles and favicons.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                 <a href="#">Piaget</a>
                                 <a href="Richard/richard.html">Richard Mille</a>
                                 <a href="#">Roger Dubuis</a>
-                                <a href="#">Rolex</a>
+                                <a href="Rolex/rolex.html">Rolex</a>
                                 <a href="#">TAG Heuer</a>
                                 <a href="#">Tudor</a>
                                 <a href="#">Vacheron Constantin</a>
