--- a/AP/ap.html
+++ b/AP/ap.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Richard Mille</title>
+    <title>Audemars Piguet</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="richard.css">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="ap.css">
+    <link rel="shortcut icon" href="https://www.audemarspiguet.com/etc.clientlibs/ap-com/ui/clientlibs/publish/resources/static/favicon-192x192.png" type="image/x-icon">
 
 </head>
 
