--- a/Richard/richard.html
+++ b/Richard/richard.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <link rel="stylesheet" href="richard.css">
     <link rel="stylesheet" href="../style.css">
+    <link rel="shortcut icon" href="https://www.richardmille.com/favicon.ico" type="image/x-icon">
 
 </head>
 
