feat: Update Audemars Piguet page with external link target and add Patek logo SVG

--- a/AP/ap.html
+++ b/AP/ap.html
@@ -48,7 +48,7 @@
             <video src="https://dynamicmedia.audemarspiguet.com/is/content/audemarspiguet/Mecha_White_D_prob4?dpr=off"
                 autoplay muted loop height="900" width="1515"></video>
             <div class="video-content">welcome to the house of wonders</div>
-            <a href="https://150years.audemarspiguet.com/en#/"><button>Discover now</button></a>
+            <a href="https://150years.audemarspiguet.com/en#/" target="_blank"><button>Discover now</button></a>
         </div>
         <section class="watch-section">
             <p>Engineering excellence</p>
