feat: Add Patek Philippe page with styling and update index link

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             <div class="mega-menu-column">
                                 <h3>P - Z</h3>
                                 <a href="#">Panerai</a>
-                                <a href="#">Patek Philippe</a>
+                                <a href="Patek/patek.html">Patek Philippe</a>
                                 <a href="#">Piaget</a>
                                 <a href="Richard/richard.html">Richard Mille</a>
                                 <a href="#">Roger Dubuis</a>
